tests/ast_interpreter/err_list_mutation_not_int_index.expected
<string>:3:5: error: index must be an integer
    list["hello"] = 99;
    ^^^^^^^^^^^^^
