tests/ast_interpreter/err_list_mutation_not_int_index.nx
fun main() {
    var list = [1, 2, 3];
    list["hello"] = 99;
}